created the new tutorial structure

--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -55,14 +55,19 @@
   },
   {
    "source": [
-    "## Building a Car"
+    "## Building a Car\n",
+    "In the following sub-chapters, the three different paradigms (procedural, functional and object oriented) are illustrated by an example.\n",
+    "The Model X car by the manufacturer Tesla is built step by step separately for each of the paradigms.\n",
+    "If a string is printed (e.g. \"Model X is driving\") the implied action is considered to take place immediately."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "### Creating the Building Plan"
+    "### Creating the Construction Plan\n",
+    "The first step in building a car is to create a construction plan.\n",
+    "In later steps, the construction plan is constantly expanded in order to be able to build the car in the final step."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -80,26 +85,254 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "car = 'Model '"
+    "car = 'Model X'"
    ]
   },
   {
-   "source": [],
+   "source": [
+    "#### Functional"
+   ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
-   "source": [],
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "car = 'Model X'"
+   ]
+  },
+  {
+   "source": [
+    "#### Object Oriented"
+   ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
-   "source": [],
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "    _name = 'Model X'"
+   ]
+  },
+  {
+   "source": [
+    "### Defining the Attributes"
+   ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
-   "source": [],
+   "source": [
+    "#### Procedural"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating the Construction Plan\n",
+    "car = 'Model X'\n",
+    "\n",
+    "# Defining the Attributes\n",
+    "car_colors = ['red', 'white', 'black']\n",
+    "car_hp = 120\n",
+    "car_length_m = 3\n",
+    "car_width_m = 1.5"
+   ]
+  },
+  {
+   "source": [
+    "#### Functional"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating the Construction Plan\n",
+    "car = 'Model X'\n",
+    "\n",
+    "# Defining the Attributes\n",
+    "car_colors = ['red', 'white', 'black']\n",
+    "car_hp = 120\n",
+    "car_length_m = 3\n",
+    "car_width_m = 1.5"
+   ]
+  },
+  {
+   "source": [
+    "Object Oriented"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "    # Creating the Construction Plan\n",
+    "    _name = 'Model X'\n",
+    "\n",
+    "    # Defining the Attributes\n",
+    "    _car_colors = ['red', 'white', 'black']\n",
+    "    _car_hp = 120\n",
+    "    _car_length_m = 3\n",
+    "    _car_width_m = 1.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "### Defining the Functionality"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### Procedural"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Model X is driving\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating the Construction Plan\n",
+    "car = 'Model X'\n",
+    "\n",
+    "# Defining the Attributes\n",
+    "car_colors = ['red', 'white', 'black']\n",
+    "car_hp = 120\n",
+    "car_length_m = 3\n",
+    "car_width_m = 1.5\n",
+    "\n",
+    "# Defining the Functionality\n",
+    "print(car, 'is driving')"
+   ]
+  },
+  {
+   "source": [
+    "#### Functional"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Model X is driving.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating the Construction Plan\n",
+    "car = 'Model X'\n",
+    "\n",
+    "# Defining the Attributes\n",
+    "car_colors = ['red', 'white', 'black']\n",
+    "car_hp = 120\n",
+    "car_length_m = 3\n",
+    "car_width_m = 1.5\n",
+    "\n",
+    "# Defining the Functionality\n",
+    "def drive(car):\n",
+    "    print(car, 'is driving.')"
+   ]
+  },
+  {
+   "source": [
+    "#### Object Oriented"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Model X is driving.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    # Creating the Construction Plan\n",
+    "    _name = 'Model X'\n",
+    "\n",
+    "    # Defining the Attributes\n",
+    "    _car_colors = ['red', 'white', 'black']\n",
+    "    _car_hp = 120\n",
+    "    _car_length_m = 3\n",
+    "    _car_width_m = 1.5\n",
+    "\n",
+    "    # Defining the Functionality\n",
+    "    def drive(self):\n",
+    "        print(self._name, 'is driving.')"
+   ]
+  },
+  {
+   "source": [
+    "### Building the Car\n",
+    "- Procedural: Car is built and driving instantly\n",
+    "- Functional: Car is built instantly but not driving\n",
+    "- OOP: Car has to be built explicitly "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Building a Different Car\n",
+    "- Inheritance\n",
+    "- Showing the advantage of OOP (reuising code parts)"
+   ],
    "cell_type": "markdown",
    "metadata": {}
   }
