--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -12,8 +12,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction\n",
-    "Programming languages are often classified by the programming paradigm they mainly support. The features of each programming language often encourage, or even mandate, structuring the various parts of a program in a specific way. While Python is often referred to as an object-oriented language, it is probably best described as a multi-paradigm programming language as its features also support many other programming paradigms.\n",
+    "# Introduction\n",
+    "Programming languages are often classified by the programming paradigm they mainly support. The features of each programming language often encourage, or even mandate, structuring the various parts of a program in a specific way. While Python is often referred to as an object-oriented language, it is probably best described as a multi-paradigm programming language as its features also many other programming paradigms. A paradigm can be described as a specific approach to solve a problem through programming.\n",
     "\n",
     "The main difference between the various paradigms is the way they handle the state of the program, i.e. the values of its variables. Controlling how and where state is transformed in a program has practical implications for how reliable and manageable the code becomes. Each programming pradigm offers a different way of managing state, in the hope that the program does not quickly fall into the trap of \"spaghetti code\", where the code is so badly structured that it becomes too complex to maintain.\n",
     "\n",
@@ -33,51 +33,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Procedural"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Functional"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Object Oriented"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Building a Car\n",
     "In the following sub-chapters, the three different paradigms (procedural, functional and object oriented) are illustrated by an example.\n",
     "The Model X car by the manufacturer Tesla is built step by step separately for each of the paradigms.\n",
     "If a string is printed (e.g. \"Model X is driving\") the implied action is considered to take place immediately."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Creating the Construction Plan\n",
     "The first step in building a car is to create a construction plan.\n",
     "In later steps, the construction plan is constantly expanded in order to be able to build the car in the final step."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
-   "source": [
-    "#### Procedural"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "#### Procedural\n",
+    "One way to build a car is to represent it as a simple string:"
+   ]
   },
   {
    "cell_type": "code",
@@ -89,11 +90,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Functional"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -105,11 +106,12 @@
    ]
   },
   {
-   "source": [
-    "#### Object Oriented"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "#### Object Oriented\n",
+    "A class is a blueprint for an object. Later in this tutorial, you will see that it contains all details about the objects (instances) that are part of the class. First, the ````class```` keyword is used to define an empty class ````Car````. "
+   ]
   },
   {
    "cell_type": "code",
@@ -122,18 +124,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Defining the Attributes"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Procedural"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -152,11 +154,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Functional"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -175,15 +177,16 @@
    ]
   },
   {
-   "source": [
-    "Object Oriented"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "#### Object Oriented\n",
+    "A class does not actually contain any data. The Car class specifies that a color, the length, the width and the hp are necessary for defining a specific car, but it does not contain the color, the length, the width and the hp of any specific car."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,18 +209,18 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Defining the Functionality"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Procedural"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -225,8 +228,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Model X is driving\n"
      ]
@@ -247,11 +250,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Functional"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -259,8 +262,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Model X is driving.\n"
      ]
@@ -282,11 +285,13 @@
    ]
   },
   {
-   "source": [
-    "#### Object Oriented"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "#### Object Oriented\n",
+    "\n",
+    "if"
+   ]
   },
   {
    "cell_type": "code",
@@ -294,8 +299,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Model X is driving.\n"
      ]
@@ -318,23 +323,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Building the Car\n",
     "- Procedural: Car is built and driving instantly\n",
     "- Functional: Car is built instantly but not driving\n",
     "- OOP: Car has to be built explicitly "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Building a Different Car\n",
     "- Inheritance\n",
     "- Showing the advantage of OOP (reuising code parts)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
@@ -353,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
