Tried some things in attributes
@ Robin
Habe jetzt mal etwas ausprobiert bei den procedrual und funcitonal parts bei den Attributes. Aber noch nicht in OOP oder weiter.
let me know what you think. :)

--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -154,6 +154,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The Model X has the following specifications:\nAvailable colours: ['red', 'white', 'black']\nHP: 120\nLength: 3\nWidth: 1.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Laura's try\n",
+    "# Having a look at the Model X first\n",
+    "\n",
+    "modelX_name = \"Model X\"\n",
+    "modelX_colors = ['red', 'white', 'black']\n",
+    "modelX_hp = 120 # wft is that? :-D @Robin what does it meeeeaaan? horse power??\n",
+    "modelX_length = 3\n",
+    "modelX_width = 1.5\n",
+    "\n",
+    "# technically using the format thingy is also kinda using a function... \n",
+    "print(\"The {} has the following specifications:\".format(modelX_name))\n",
+    "print(\"Available colours: {}\".format(modelX_colors))\n",
+    "print(\"HP: {}\".format(modelX_hp))\n",
+    "print(\"Length: {}\".format(modelX_length))\n",
+    "print(\"Width: {}\".format(modelX_width))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The Model S has the following specifications:\nAvailable colours: ['yellow', 'black']\nHP: 150\nLength: 2.5\nWidth: 1.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If I now want to have a look at Tesla's Model S I have to specify all the variables again\n",
+    "modelS_name = \"Model S\"\n",
+    "modelS_colors = [\"yellow\", \"black\"]\n",
+    "modelS_hp = 150\n",
+    "modelS_length = 2.5\n",
+    "modelS_width = 1.25\n",
+    "\n",
+    "# And in order to display all of it again I have to write all this code again too\n",
+    "print(\"The {} has the following specifications:\".format(modelS_name))\n",
+    "print(\"Available colours: {}\".format(modelS_colors))\n",
+    "print(\"HP: {}\".format(modelS_hp))\n",
+    "print(\"Length: {}\".format(modelS_length))\n",
+    "print(\"Width: {}\".format(modelS_width))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -177,6 +237,142 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Laura's try\n",
+    "\n",
+    "# As we've seen in the prodedrual way of doing this, there are a lot of redundancies. \n",
+    "# Meaning, that we write a lot of similar code multiple times. \n",
+    "# Clearly this doesn't scale, so a way of approaching this could be to define a function\n",
+    "# The function will take the car specific values as inputs\n",
+    "\n",
+    "def car_specs(name, colors, hp, length, width):\n",
+    "    \"\"\"\n",
+    "    Prints the specifications.\n",
+    "    Returns a list containing the car's specifications. \n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    car_specs = [name, colors, hp, length, width]\n",
+    "\n",
+    "    print(\"The {} has the following specifications:\".format(name))\n",
+    "    print(\"Available colours: {}\".format(colors))\n",
+    "    print(\"HP: {}\".format(hp))\n",
+    "    print(\"Length: {}\".format(length))\n",
+    "    print(\"Width: {}\".format(width))\n",
+    "\n",
+    "    return car_specs\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The Model X has the following specifications:\nAvailable colours: ['red', 'white', 'black']\nHP: 120\nLength: 3\nWidth: 1.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now we can use it with the Model X specifications\n",
+    "modelX_specs = car_specs(name=\"Model X\", \n",
+    "                         colors=['red', 'white', 'black'], \n",
+    "                         hp=120, \n",
+    "                         length=3, \n",
+    "                         width=1.5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['Model X', ['red', 'white', 'black'], 120, 3, 1.5]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "modelX_specs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The Model S has the following specifications:\nAvailable colours: ['yellow', 'black']\nHP: 150\nLength: 2.5\nWidth: 1.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# And we can also easily use it with the Model S specifications\n",
+    "modelS_specs = car_specs(name=\"Model S\",\n",
+    "                         colors=['yellow', 'black'],\n",
+    "                         hp=150,\n",
+    "                         length=2.5,\n",
+    "                         width=1.25)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['Model S', ['yellow', 'black'], 150, 2.5, 1.25]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "modelS_specs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['Model S', ['yellow', 'black'], 150, 2.5, 1.25]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "modelS_specs"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -190,6 +386,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# L: I think we need to introduce the __init__() function here already... for the attributes. \n",
+    "\n",
     "class Car:\n",
     "    # Creating the Construction Plan\n",
     "    _name = 'Model X'\n",
@@ -358,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.0-final"
   }
  },
  "nbformat": 4,
