--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -58,8 +58,12 @@
    "metadata": {},
    "source": [
     "## Building a Car\n",
-    "In the following sub-chapters, the three different paradigms (procedural, functional and object oriented) are illustrated by an example.\n",
-    "The Model X car by the manufacturer Tesla is built step by step separately for each of the paradigms.\n",
+    "In the following sub-chapters, the three different paradigms (procedural, functional and object oriented) are all illustrated by the same example: The Model X car by the manufacturer Tesla is built step by step separately for each of the paradigms.\n",
+    "1. [Creating the Construction Plan for the Car](###)\n",
+    "2. [Defining the Car's Attributes](#)\n",
+    "3. [Defining the Car's Functionality](#)\n",
+    "4. [Completion of the Car](#)\n",
+    "\n",
     "If a string is printed (e.g. \"Model X is driving\") the implied action is considered to take place immediately."
    ]
   },
@@ -67,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating the Construction Plan\n",
+    "### 1. Creating the Construction Plan\n",
     "The first step in building a car is to create a construction plan.\n",
     "In later steps, the construction plan is constantly expanded in order to be able to build the car in the final step."
    ]
@@ -110,24 +114,40 @@
    "metadata": {},
    "source": [
     "#### Object Oriented\n",
-    "A class is a blueprint for an object. Later in this tutorial, you will see that it contains all details about the objects (instances) that are part of the class. First, the ````class```` keyword is used to define an empty class ````Car````. "
+    "A class is like a blueprint for an object. Later in this tutorial you will see that it contains all details about the objects (instances) that are part of the class. First, the ````class```` keyword is used to define an empty class ````Car````. Any code that follows the colon and is indented below the class definition is considered part of the class’s body. For now, the ````pass```` statement functions as a placeolder to indicate where code will eventually go. It allows you to run the code without any errors."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Car:\n",
-    "    _name = 'Model X'"
+    "    pass"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Defining the Attributes"
+    "Creating a new object from a class is called instantiating an object. You can instantiate a new Car object by assigning the name of the class, followed by opening and closing parentheses, to the variable name of your object: In this case ````Model_X````. You can create as many objects from a class as you like and assign each of them to a different variable, for instance ````Model_Y````,````Model_S````, etc. Altough they will all be instances from the same class, they represent distinct objects.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Model_X = Car()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Defining the Attributes"
    ]
   },
   {
@@ -159,10 +179,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "The Model X has the following specifications:\nAvailable colours: ['red', 'white', 'black']\nHP: 120\nLength: 3\nWidth: 1.5\n"
+      "The Model X has the following specifications:\n",
+      "Available colours: ['red', 'white', 'black']\n",
+      "HP: 120\n",
+      "Length: 3\n",
+      "Width: 1.5\n"
      ]
     }
    ],
@@ -190,10 +214,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "The Model S has the following specifications:\nAvailable colours: ['yellow', 'black']\nHP: 150\nLength: 2.5\nWidth: 1.25\n"
+      "The Model S has the following specifications:\n",
+      "Available colours: ['yellow', 'black']\n",
+      "HP: 150\n",
+      "Length: 2.5\n",
+      "Width: 1.25\n"
      ]
     }
    ],
@@ -274,10 +302,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "The Model X has the following specifications:\nAvailable colours: ['red', 'white', 'black']\nHP: 120\nLength: 3\nWidth: 1.5\n"
+      "The Model X has the following specifications:\n",
+      "Available colours: ['red', 'white', 'black']\n",
+      "HP: 120\n",
+      "Length: 3\n",
+      "Width: 1.5\n"
      ]
     }
    ],
@@ -296,14 +328,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['Model X', ['red', 'white', 'black'], 120, 3, 1.5]"
       ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "execution_count": 14
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -316,10 +348,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "The Model S has the following specifications:\nAvailable colours: ['yellow', 'black']\nHP: 150\nLength: 2.5\nWidth: 1.25\n"
+      "The Model S has the following specifications:\n",
+      "Available colours: ['yellow', 'black']\n",
+      "HP: 150\n",
+      "Length: 2.5\n",
+      "Width: 1.25\n"
      ]
     }
    ],
@@ -335,17 +371,19 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['Model S', ['yellow', 'black'], 150, 2.5, 1.25]"
       ]
      },
+     "execution_count": 18,
      "metadata": {},
-     "execution_count": 18
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -358,14 +396,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['Model S', ['yellow', 'black'], 150, 2.5, 1.25]"
       ]
      },
+     "execution_count": 16,
      "metadata": {},
-     "execution_count": 16
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -410,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Defining the Functionality"
+    "### 3. Defining the Functionality"
    ]
   },
   {
@@ -556,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
