Added more text to OOP section 2

--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -415,7 +415,20 @@
    "metadata": {},
    "source": [
     "#### Object Oriented\n",
-    "A class does not actually contain any data. The Car class specifies that a color, the length, the width and the hp are necessary for defining a specific car, but it does not contain the color, the length, the width and the hp of any specific car."
+    "A class does not actually contain any data. A method called .__init__() specifies that different parameters are necessary to define a certain car, but it does not contain the actual values for these parameters for any specific car. Every time a new car object is created, init() sets the initial state of the object by assigning the values of the object’s properties. That is, init() initializes each new instance of the class.\n",
+    "\n",
+    "You can create as many attributes in the init() method as you like, but the first parameter will always be a variable called self. When a new class instance is created, the instance is automatically passed to the self parameter in init() so that new attributes can be defined for the object. Note in the code below, the init() function is indented by four spaces and the body of the method by eight spaces. This exact indentation is important to Python, as it indicates that the init() method belongs to the Car class.\n",
+    "\n",
+    "In the body of init(), there are four statements - one for each attribute - using the self variable:\n",
+    "\n",
+    "1. __self.colors = colors__ creates an attribute called colors and assigns to it the value of the colors parameter.\n",
+    "2. __self.hp = hp__ creates an attribute called hp and assigns to it the value of the hp parameter.\n",
+    "3. __self.length = length__ creates an attribute called length and assigns to it the value of the length parameter.\n",
+    "4. __self.width = width__ creates an attribute called width and assigns to it the value of the width parameter.\n",
+    "\n",
+    "As mentioned above, all attributes created in the init() method are specific to the instances and hence referred to as instance attributes. In other words, all car objects have a length, width, etc. but the values for these parameters vary depending on the Car instance. \n",
+    "\n",
+    "In order to create attributes that all objects inherit, so called class attributes, a value can be assigned to a variable name outside the init() function. Exemplary, all Cars of our class are models by Tesla."
    ]
   },
   {
@@ -439,10 +452,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#S: proposal to present attributes\n",
+    "class Car:\n",
+    "    \n",
+    "    #class atrributes\n",
+    "    Brand = \"Tesla\"\n",
+    "    \n",
+    "    #instance attributes\n",
+    "    def __init__(self, colors, hp, length, width):\n",
+    "        self.colors = colors\n",
+    "        self.hp = hp\n",
+    "        self.length = length\n",
+    "        self.width = width"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model X is a car by Tesla.\n",
+      "Model X has a length of 3m and a width of 1.5m.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#instantiate the Car class with the Model X object\n",
+    "Model_X = Car(['red', 'white', 'black'],120,3,1.5)\n",
+    "\n",
+    "# access the class attributes\n",
+    "print(\"Model X is a car by {}.\".format(Model_X.__class__.Brand))\n",
+    "\n",
+    "# access the instance attributes\n",
+    "print(\"Model X has a length of {}m and a width of {}m.\".format( Model_X.length, Model_X.width))"
+   ]
   },
   {
    "cell_type": "markdown",
