added images for the car and changed the part about specifying the model

--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -58,22 +58,26 @@
    "metadata": {},
    "source": [
     "## Building a Car\n",
-    "In the following sub-chapters, the three different paradigms (procedural, functional and object oriented) are all illustrated by the same example: The Model X car by the manufacturer Tesla is built step by step separately for each of the paradigms.\n",
-    "1. [Creating the Construction Plan for the Car](###)\n",
+    "In the following sub-chapters, the three different paradigms (procedural, functional and object oriented) are all illustrated by the same example: The Model X car by the manufacturer Tesla is built step by step separately for each of the paradigms. The aim of this chapter is to understand that the three paradigms mentioned are not completely different things, but just a different perspective on the same thing. Through the example of building a car, the natural understanding of the basic principles of everyday objects should be used to understand the different paradigms more easily. To get a better idea of the car, here is a picture of the original Model X from Tesla:\n",
+    "\n",
+    "![Markdown](imgs/06_model_x.png)\n",
+    "\n",
+    "The example in which the three paradigms are explained starts with the creation of the construction plan, in which the requirements for the car (such as its characteristics and functionality) are recorded in the later subchapters. The example ends with the construction of the car. If a string is printed in the following subchapters (e.g. \"Model X is driving\"), the implied action is considered to take place immediately. The intermediate steps are as follows:\n",
+    "\n",
+    "1. [Specifying the Model](###)\n",
     "2. [Defining the Car's Attributes](#)\n",
     "3. [Defining the Car's Functionality](#)\n",
-    "4. [Completion of the Car](#)\n",
-    "\n",
-    "If a string is printed (e.g. \"Model X is driving\") the implied action is considered to take place immediately."
+    "4. [Completion of the Car](#)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Creating the Construction Plan\n",
-    "The first step in building a car is to create a construction plan.\n",
-    "In later steps, the construction plan is constantly expanded in order to be able to build the car in the final step."
+    "### 1. Specifying the Model\n",
+    "The start of any project that aims to build a car is to define the end goal. In concrete terms, this means for the example that the model to be built is specified and thus the construction plan, which will be constantly expanded in the subsequent subchaters, is created.\n",
+    "\n",
+    "<img src=\"imgs/06_blueprint_original.png\" width=\"400\">"
    ]
   },
   {
@@ -81,32 +85,55 @@
    "metadata": {},
    "source": [
     "#### Procedural\n",
-    "One way to build a car is to represent it as a simple string:"
+    "To create the construction plan, we need something with which we can link the different attributes and functions of the car. For this, in the procedural paradigm, a variable containing a string with the name of the model is created."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The name of the model under construction is: Model X\n"
+     ]
+    }
+   ],
    "source": [
-    "car = 'Model X'"
+    "modelX_name = \"Model X\"\n",
+    "\n",
+    "print(\"The name of the model under construction is: {}\".format(modelX_name))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Functional"
+    "#### Functional\n",
+    "In the case of the functional paradigm, a function with the name \"create_construction_plan\" is created, which specifies the name of the model by passing the parameter \"model_name\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The name of the model under construction is: Model X\n"
+     ]
+    }
+   ],
    "source": [
-    "car = 'Model X'"
+    "def create_construction_plan(model_name):\n",
+    "    print(\"The name of the model under construction is: {}\".format(model_name))\n",
+    "    return model_name\n",
+    "\n",
+    "modelX_name = create_construction_plan(\"Model X\")"
    ]
   },
   {
@@ -114,40 +141,51 @@
    "metadata": {},
    "source": [
     "#### Object Oriented\n",
-    "A class is like a blueprint for an object. Later in this tutorial you will see that it contains all details about the objects (instances) that are part of the class. First, the ````class```` keyword is used to define an empty class ````Car````. Any code that follows the colon and is indented below the class definition is considered part of the class’s body. For now, the ````pass```` statement functions as a placeolder to indicate where code will eventually go. It allows you to run the code without any errors."
+    "A class is like a blueprint for an object. Later in this tutorial you will see that it contains all details about the objects (instances) that are part of the class. First, the ````class```` keyword is used to define an empty class ````Car````. Any code that follows the colon and is indented below the class definition is considered part of the class’s body. Objects of a class are created using constructors which are special methods for creating instances of a class. The constructor of a class in python is defined by the ````init```` method. This function is called each time an object is instantiated."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Car:\n",
-    "    pass"
+    "    def __init__(self, model_name):\n",
+    "        print(\"The name of the model under construction is: {}\".format(model_name))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creating a new object from a class is called instantiating an object. You can instantiate a new Car object by assigning the name of the class, followed by opening and closing parentheses, to the variable name of your object: In this case ````Model_X````. You can create as many objects from a class as you like and assign each of them to a different variable, for instance ````Model_Y````,````Model_S````, etc. Altough they will all be instances from the same class, they represent distinct objects.  "
+    "Creating a new object from a class is called instantiating an object. You can instantiate a new Car object by assigning the name of the class, followed by opening and closing parentheses, to the variable name of your object: In this case ````modelX````. You can create as many objects from a class as you like and assign each of them to a different variable, for instance ````modelY````,````modelS````, etc. Altough they will all be instances from the same class, they represent distinct objects.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The name of the model under construction is: Model X\n"
+     ]
+    }
+   ],
    "source": [
-    "Model_X = Car()"
+    "modelX = Car(\"Model X\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Defining the Attributes"
+    "### 2. Defining the Attributes\n",
+    "\n",
+    "<img src=\"imgs/06_blueprint_attributes.png\" width=\"400\">"
    ]
   },
   {
@@ -196,7 +234,7 @@
     "\n",
     "modelX_name = \"Model X\"\n",
     "modelX_colors = ['red', 'white', 'black']\n",
-    "modelX_hp = 120 # wft is that? :-D @Robin what does it meeeeaaan? horse power??\n",
+    "modelX_hp = 120\n",
     "modelX_length = 3\n",
     "modelX_width = 1.5\n",
     "\n",
@@ -245,7 +283,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Functional"
+    "#### Functional\n",
+    "<img src=\"imgs/06_blueprint_functionality.png\" width=\"400\">"
    ]
   },
   {
@@ -645,7 +684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
