--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -141,7 +141,7 @@
    "metadata": {},
    "source": [
     "#### Object Oriented\n",
-    "A class is like a blueprint for an object. Later in this tutorial you will see that it contains all details about the objects (instances) that are part of the class. First, the ````class```` keyword is used to define an empty class ````Car````. Any code that follows the colon and is indented below the class definition is considered part of the class’s body. Objects of a class are created using constructors which are special methods for creating instances of a class. The constructor of a class in python is defined by the ````init```` method. This function is called each time an object is instantiated."
+    "A class is like a blueprint for an object. Later in this tutorial you will see that it contains all details about the objects (instances) that are part of the class. First, the ````class```` keyword is used to define an empty class ````Car````. Any code that follows the colon and is indented below the class definition is considered part of the class’s body. Objects of a class are created using constructors which are special methods for creating instances of a class. The constructor of a class in python is defined by the ````init```` method and is called each time an object is instantiated."
    ]
   },
   {
