--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -57,17 +57,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Building a Car\n",
-    "In the following sub-chapters, the three different paradigms (procedural, functional and object oriented) are all illustrated by the same example: The Model X car by the manufacturer Tesla is built step by step separately for each of the paradigms. The aim of this chapter is to understand that the three paradigms mentioned are not completely different things, but just a different perspective on the same thing. Through the example of building a car, the natural understanding of the basic principles of everyday objects should be used to understand the different paradigms more easily. To get a better idea of the car, here is a picture of the original Model X from Tesla:\n",
+    "## Example Case: Building a Car\n",
+    "In the following sub-chapters, the three different paradigms - procedural, functional and object oriented - will all be illustrated by the same example: the construction of the Model X car by the manufacturer Tesla. The aim of this chapter is to convey to the reader that the three paradigms are not completely different 'things', but rather allow a different perspective or approach to tackle one and the same problem. The example with the car, a simple everyday objcet, is used to convey the concepts of the three paradigms more easily. To get a better idea of the car, here is a picture of the original Model X by Tesla:\n",
     "\n",
     "![Markdown](imgs/06_model_x.png)\n",
     "\n",
-    "The example in which the three paradigms are explained starts with the creation of the construction plan, in which the requirements for the car (such as its characteristics and functionality) are recorded in the later subchapters. The example ends with the construction of the car. If a string is printed in the following subchapters (e.g. \"Model X is driving\"), the implied action is considered to take place immediately. The intermediate steps are as follows:\n",
+    "The steps in the construction of the car are as follows: \n",
     "\n",
     "1. [Specifying the Model](###)\n",
     "2. [Defining the Car's Attributes](#)\n",
     "3. [Defining the Car's Functionality](#)\n",
-    "4. [Completion of the Car](#)"
+    "4. [Completion of the Car](#)\n",
+    "\n",
+    "Note, if a string is printed in the following subchapters (e.g. \"Model X is driving\"), the implied action is considered to take place immediately."
    ]
   },
   {
@@ -75,7 +77,9 @@
    "metadata": {},
    "source": [
     "### 1. Specifying the Model\n",
-    "The start of any project that aims to build a car is to define the end goal. In concrete terms, this means for the example that the model to be built is specified and thus the construction plan, which will be constantly expanded in the subsequent subchaters, is created.\n",
+    "\n",
+    "__(S: I think this parapgraph can be deleted and instead we could directly start with specifiying the car (as that is also the title of the subchapter), and then we can show the image at the end of this chapter to show how far we've come)__\n",
+    "For any given project it is important to define the final goal and the steps on how to get there. In this specific example of building a car, we will first create a constrcution plan that will later be expandend by attributes and functionalities in oder to derive at the final fully functioning car. To create the construction plan, we need something with which we can link the different attributes and functions of the car. For this, in the procedural paradigm, a variable containing a string with the name of the model is created.\n",
     "\n",
     "<img src=\"imgs/06_blueprint_original.png\" width=\"400\">"
    ]
@@ -85,12 +89,12 @@
    "metadata": {},
    "source": [
     "#### Procedural\n",
-    "To create the construction plan, we need something with which we can link the different attributes and functions of the car. For this, in the procedural paradigm, a variable containing a string with the name of the model is created."
+    "In the procedural way, the car model is 'specified' simply through assigning the name of the model, Model X, to a variable of your choice:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -102,9 +106,9 @@
     }
    ],
    "source": [
-    "modelX_name = \"Model X\"\n",
+    "model_name = \"Model X\"\n",
     "\n",
-    "print(\"The name of the model under construction is: {}\".format(modelX_name))"
+    "print(\"The name of the model under construction is: {}\".format(model_name))"
    ]
   },
   {
@@ -112,12 +116,12 @@
    "metadata": {},
    "source": [
     "#### Functional\n",
-    "In the case of the functional paradigm, a function with the name \"create_construction_plan\" is created, which specifies the name of the model by passing the parameter \"model_name\"."
+    "In the case of the functional paradigm, we create a function called ````specify_model```` that specifies the name of the model by passing the parameter ````model_name````:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -129,11 +133,11 @@
     }
    ],
    "source": [
-    "def create_construction_plan(model_name):\n",
+    "def specify_model(model_name):\n",
     "    print(\"The name of the model under construction is: {}\".format(model_name))\n",
-    "    return model_name\n",
+    "    return car\n",
     "\n",
-    "modelX_name = create_construction_plan(\"Model X\")"
+    "car_model = specify_model(\"Model X\")"
    ]
   },
   {
@@ -141,7 +145,45 @@
    "metadata": {},
    "source": [
     "#### Object Oriented\n",
-    "A class is like a blueprint for an object. Later in this tutorial you will see that it contains all details about the objects (instances) that are part of the class. First, the ````class```` keyword is used to define an empty class ````Car````. Any code that follows the colon and is indented below the class definition is considered part of the class’s body. Objects of a class are created using constructors which are special methods for creating instances of a class. The constructor of a class in python is defined by the ````init```` method and is called each time an object is instantiated."
+    "And lastly, turning our viewpoint to the object oriented paradigm:\n",
+    "\n",
+    "A class is like a blueprint for an object. Later in this tutorial you will see that it contains all details about the objects that are part of the class. The ````class```` keyword is used to define an empty class ````Car````. Any code that follows the colon and is indented below the class definition is considered part of the class’s body. For now, the ````pass```` statement functions as a placeolder to indicate where code will eventually go. It allows you to run the code without any errors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#S proposal\n",
+    "class Car:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating a new object from a class is called instantiating an object. You can instantiate a new Car object by assigning the name of the class, followed by opening and closing parentheses, to the variable name of your object: In this case ````Model_X````. You can create as many objects from a class as you like and assign each of them to a different variable, for instance ````Model_Y````,````Model_S````, etc. Altough they will all be instances from the same class, they represent distinct objects.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#S proposal\n",
+    "Model_X = Car()\n",
+    "#The name of the model under construction is: Model X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Old Text: Objects of a class are created using constructors which are special methods for creating instances of a class. The constructor of a class in python is defined by the ````init```` method and is called each time an object is instantiated."
    ]
   },
   {
@@ -153,13 +195,6 @@
     "class Car:\n",
     "    def __init__(self, model_name):\n",
     "        print(\"The name of the model under construction is: {}\".format(model_name))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Creating a new object from a class is called instantiating an object. You can instantiate a new Car object by assigning the name of the class, followed by opening and closing parentheses, to the variable name of your object: In this case ````modelX````. You can create as many objects from a class as you like and assign each of them to a different variable, for instance ````modelY````,````modelS````, etc. Altough they will all be instances from the same class, they represent distinct objects.  "
    ]
   },
   {
